--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = [
 ]
 dependencies = [
     "pyyaml>=6.0",
+    "lpilGerbyConfig @ git+https://github.com/litProgLaTeX/lpil-gerby-configuration.git",
 ]
 requires-python = ">=3.10"
 license = {text = "Apache2.0"}
